# Deckadence

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  spec.md  todo.md
ai_walmart/: prompts.json
deckadence/: __init__.py  __main__.py  cli.py  config.py  costs.py  logging_config.py  models.py  pricing.yaml  prompts.py  prompts.yaml  services.py  ui.py
sample_project/: deck.json
test_project/: prompts.json
