[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deckadence*"]

[project]
name = "deckadence"
version = "0.1.0"
description = "Deckadence: highly visual slide deck designer, player, and exporter."
authors = [{ name = "Deckadence", email = "devnull@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "google-genai>=1.0.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "Pillow>=10",
    "ffmpeg-python>=0.2",
    "aiofiles>=23",
    "tenacity>=8",
    "typer>=0.12",
    "click>=8.0.0,<8.2",
    "ruamel.yaml>=0.18",
    "fal-client>=0.5",
    "rich>=13",
]

[project.scripts]
deckadence = "deckadence.cli:main"
